fixed login methods and added cognitoUSerSession IIFE

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "amazon-cognito-identity-js": "^6.0.1",
     "graphql-request": "^5.0.0"
   }
 }
