--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.226.0",
     "amazon-cognito-identity-js": "^6.0.1",
     "graphql-request": "^5.0.0"
   }
