--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.226.0",
+    "@aws-sdk/client-s3": "^3.229.0",
     "amazon-cognito-identity-js": "^6.0.1",
     "graphql-request": "^5.0.0"
   }
